--- a/config.org
+++ b/config.org
@@ -3,7 +3,7 @@
   (defun js/version ()
     "Provides the version number of the init file."
     (interactive)
-    (message "init version 30"))
+    (message "init version 31"))
 #+END_SRC
 
 * credits
@@ -911,4 +911,17 @@ for passphrase back to EPG.  EPG prompts at the minibuffer.
 
 #+BEGIN_SRC emacs-lisp
 (setq epg-pinentry-mode 'loopback)
+#+END_SRC
+
+* company
+
+[[http://company-mode.github.io/][web]] [[https://melpa.org/#/company][MELPA]]
+
+I've generally tried to avoid completions flashing on the screen but Tony Adlon's
+[[https://youtu.be/96jn5A73-oQ][video]] convinced me to try company.
+
+#+BEGIN_SRC emacs-lisp
+  (use-package company
+    :ensure t)
+  (add-hook 'after-init-hook 'global-company-mode)
 #+END_SRC
