--- a/config.org
+++ b/config.org
@@ -421,7 +421,8 @@ I don't want to confirm every time babel evaluates.
       (when (file-exists-p "~/.emacs.d/local_snippets")
         (setq yas-snippet-dirs (append yas-snippet-dirs
                                        '("~/.emacs.d/local_snippets"))))
-      (yas-global-mode 1))
+      (yas-global-mode 1)
+      :bind ("C-<" . yas-insert-snippet))
 #+END_SRC
 
 * quick snippets
@@ -922,6 +923,7 @@ I've generally tried to avoid completions flashing on the screen but Tony Adlon'
 
 #+BEGIN_SRC emacs-lisp
   (use-package company
-    :ensure t)
+    :ensure t
+    :diminish company-mode)
   (add-hook 'after-init-hook 'global-company-mode)
 #+END_SRC
