--- a/config.org
+++ b/config.org
@@ -418,11 +418,12 @@ I don't want to confirm every time babel evaluates.
   (use-package yasnippet
       :ensure t
       :diminish yas-minor-mode
+      :init
+      (yas-global-mode 1)
       :config
       (when (file-exists-p "~/.emacs.d/local_snippets")
         (setq yas-snippet-dirs (append yas-snippet-dirs
                                        '("~/.emacs.d/local_snippets"))))
-      (yas-global-mode 1)
       :bind ("C-<" . yas-insert-snippet))
 #+END_SRC
 
