--- a/config.org
+++ b/config.org
@@ -424,6 +424,7 @@ I don't want to confirm every time babel evaluates.
       (when (file-exists-p "~/.emacs.d/local_snippets")
         (setq yas-snippet-dirs (append yas-snippet-dirs
                                        '("~/.emacs.d/local_snippets"))))
+      (yas-reload-all)
       :bind ("C-<" . yas-insert-snippet))
 #+END_SRC
 
