--- a/config.org
+++ b/config.org
@@ -978,3 +978,13 @@ I've generally tried to avoid completions flashing on the screen but Tony Adlon'
                 (company-mode))))
 
 #+END_SRC
+
+* git interface
+
+[[https://github.com/magit/magit][magit]] [[https://melpa.org/#/magit][MELPA]]
+
+#+BEGIN_SRC emacs-lisp :tangle yes
+  (use-package magit
+    :ensure t)
+#+END_SRC
+
