--- a/config.org
+++ b/config.org
@@ -383,6 +383,7 @@ I don't want to confirm every time babel evaluates.
   (setq org-cycle-separator-lines 1)
   (setq org-confirm-babel-evaluate nil)
   (setq org-agenda-span 'day)
+  (setq org-cycle-emulate-tab 'white)
   (setq org-publish-project-alist
         '(("keyboard"
            :base-directory "~/notes/"
