--- a/config.org
+++ b/config.org
@@ -1120,3 +1120,17 @@ Thank you to [[https://github.com/purcell/emacs.d/blob/master/lisp/init-elpa.el]
   (use-package magit
     :ensure t)
 #+END_SRC
+
+* ledger
+
+#+BEGIN_SRC emacs-lisp
+  (use-package ledger-mode
+    :ensure t
+    :config
+    (add-hook 'ledger-mode-hook
+              (lambda ()
+                (setq-local tab-always-indent 'complete)
+                (setq-local completion-cycle-threshold t)
+                (setq-local ledger-complete-in-steps t)))
+    (setq ledger-default-date-format ledger-iso-date-format))
+#+END_SRC
